pkg/objects/AllocationRequest__c.object
<CustomObject>
    <description>Registers the allocations and deallocations solicitations.</description>
    <fields>
        <fullName>CommentsAboutTheDeallocationReason__c</fullName>
        <description>The Comments About The Deallocation Reason</description>
        <inlineHelpText>Insert any comments about the deallocation reason.</inlineHelpText>
        <label>Comments About The Deallocation Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsAboutThePosition__c</fullName>
        <description>The comments about the position.</description>
        <inlineHelpText>Insert any comments related to the position.</inlineHelpText>
        <label>Comments About The Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeallocationDate__c</fullName>
        <description>The date of the deallocation</description>
        <inlineHelpText>Informe the date of the deallocation.</inlineHelpText>
        <label>Deallocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployeeName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the employee deallocated</description>
        <inlineHelpText>Inform the name of the employee deallocated</inlineHelpText>
        <label>Employee Name</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Allocation Requests (Employee Name)</relationshipLabel>
        <relationshipName>AllocationRequestsDeallocatedEmployee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ForecastEndDateOfAllocation__c</fullName>
        <description>The allocation final forecast date</description>
        <inlineHelpText>Inform the forecast end date of the allocation.</inlineHelpText>
        <label>Forecast End Date of Allocation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForecastStartDateAllocation__c</fullName>
        <description>The forecast start date of allocation.</description>
        <inlineHelpText>Inform the forecst date of the allocation.</inlineHelpText>
        <label>Forecast Start Date of Allocation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The related project</description>
        <inlineHelpText>Inform the related project.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Allocation Requests</relationshipLabel>
        <relationshipName>AllocationRequests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestStatus__c</fullName>
        <description>Defines the status of the request</description>
        <inlineHelpText>Select the request current status.</inlineHelpText>
        <label>Request Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitado</fullName>
                </value>
                <value>
                    <fullName>Em andamento</fullName>
                </value>
                <value>
                    <fullName>Em entrevista</fullName>
                </value>
                <value>
                    <fullName>Aguardando retorno do solicitante</fullName>
                </value>
                <value>
                    <fullName>Atendida</fullName>
                </value>
                <value>
                    <fullName>Cancelada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee who made de request.</description>
        <inlineHelpText>Informe the name of the employee who made the request.</inlineHelpText>
        <label>Requester</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Allocation Requests (Requester)</relationshipLabel>
        <relationshipName>AllocationRequestsRequester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Employee role.</description>
        <inlineHelpText>The role of the chosen employee.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesforceCoreCloud__c</fullName>
        <description>Salesforce&apos;s core cloud</description>
        <inlineHelpText>The core cloud of the allocation&apos;s project.</inlineHelpText>
        <label>Salesforce Core Cloud</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Financial Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Health Cloud</fullName>
                </value>
                <value>
                    <fullName>Philantropy Cloud</fullName>
                </value>
                <value>
                    <fullName>Salesforce Platform</fullName>
                </value>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>App Builder</fullName>
                </value>
                <value>
                    <fullName>Community Builder</fullName>
                </value>
                <value>
                    <fullName>Pardot</fullName>
                </value>
                <value>
                    <fullName>Integração</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Vlocity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <description>Employee seniority</description>
        <inlineHelpText>The seniority of the informed employee</inlineHelpText>
        <label>Seniority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PNT</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Pleno</fullName>
                </value>
                <value>
                    <fullName>Consultor</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Especialista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuggestedEmployee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The suggested employee.</description>
        <inlineHelpText>The suggested employee for the allocation.</inlineHelpText>
        <label>Suggested Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Allocation Requests (Suggested Employee)</relationshipLabel>
        <relationshipName>AllocationRequestsSuggestedEmployee</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allocation Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Request Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Requests</pluralLabel>
    <recordTypes>
        <fullName>AllocationRequest</fullName>
        <active>true</active>
        <label>Allocation Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>DeallocationRequest</fullName>
        <active>true</active>
        <label>Deallocation Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>